# Boodongsan-AI

./: .gitignore  .mcp.json  AWS_DEPLOYMENT_STEPS.md  CLAUDE.md  DEPLOYMENT.md  LICENSE  LIGHTRAG_PERFORMANCE.md  PROJECT_COMPLETION_ROADMAP.md  QUICKSTART.md  README.md  TROUBLESHOOTING_SUMMARY.md  docker-compose.yml
.serena/: project.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  dump.rdb  pyproject.toml  requirements.txt
backend/ai/: bedrock_client.py  langchain_pipeline.py
backend/alembic/: env.py
backend/alembic/versions/: 20251119_1520_826ddedd5b20_rename_document_metadata_field.py  20251202_1742_change_vector_dim_to_1024.py
backend/api/: dependencies.py  main.py
backend/api/middleware/: __init__.py  auth.py  caching.py
backend/api/routers/: admin.py  bedrock_test.py  chat.py  chroma_test.py  citydata.py  health.py  policies.py  properties.py  users.py
backend/core/: __init__.py  cache.py  config.py  database.py  exceptions.py  monitoring.py
backend/data/: __init__.py
backend/data/collectors/: __init__.py  pdr_collector.py  real_estate_collector.py  reb_collector.py  seoul_opendata_collector.py  sigungu_service.py
backend/database/: __init__.py  base.py  connection.py  models.py  policy_seed_data.py  session.py
backend/jobs/: __init__.py  celery_app.py  tasks.py
backend/lightrag_storage/BODA/: graph_chunk_entity_relation.graphml
backend/lightrag_storage_backup_1536/BODA/: graph_chunk_entity_relation.graphml  kv_store_doc_status.json  kv_store_entity_chunks.json  kv_store_full_docs.json  kv_store_full_entities.json  kv_store_full_relations.json  kv_store_relation_chunks.json  kv_store_text_chunks.json
backend/migrations/: 001_lightrag_schema.sql  002_properties_schema.sql  003_policies_schema.sql
backend/models/: __init__.py  base.py  policy.py  property.py  user.py
backend/scripts/: README.md  __init__.py  check_requirements.py  db_setup.py  load_data.py  migrate_to_1024_dimensions.sql  migrate_vector_dimension.py  switch_storage.sh  test_minimal.py  verify_background_jobs.py
backend/services/: __init__.py  ai_service.py  bedrock_service.py  checkpoint_service.py  chromadb_service.py  data_service.py  hybrid_vector_service.py  lightrag_service.py  opensearch_service.py  policy_service.py  property_service.py  rag_service.py  seoul_city_data_service.py  user_profiling_service.py  user_service.py  vector_service.py
backend/services/storage/: __init__.py  base.py  factory.py  local_backend.py  postgresql_backend.py
backend/tests/: api-test.py  api-test2.py
batch/: .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  env_example.txt  main.py  pyproject.toml  requirements.txt
batch/collectors/: __init__.py  base_collector.py  offi_collector.py
batch/opensearch/nodes/0/_state/: _76.fdm  _76.fdt  _76.fdx  _76.fnm  _76.si  _76_1.liv  _76_Lucene90_0.doc  _76_Lucene90_0.tim  _76_Lucene90_0.tip  _76_Lucene90_0.tmd  _77.cfe  _77.cfs  _77.si  node-5.st  segments_6r
batch/opensearch/nodes/0/indices/2HKPqUN6S9CZmNW3K6nh4g/_state/: state-8.st
batch/opensearch/nodes/0/indices/9HlKvNBOQjiUH5-kOvj7tg/_state/: state-11.st
batch/opensearch/nodes/0/indices/KhtL-PGNQ7OSziY3ILZjzQ/_state/: state-11.st
batch/opensearch/nodes/0/indices/QUflZObmRiK3rh7WAHeC_Q/_state/: state-8.st
batch/scripts/: immediate-collect-rancher.sh  immediate-collect.sh  start-rancher.sh  start.sh  stop-rancher.sh  stop.sh
batch/src/: __init__.py  collect_data_now.py  collect_data_scheduled.py  load_lawd_codes.py  run_tests.py
batch/src/collectors/: apartment_collector.py  base_collector.py  molit_policy_collector.py  offi_collector.py  rh_collector.py
batch/src/config/: __init__.py  constants.py  settings.py
batch/src/database/: opensearch_client.py
batch/src/services/: data_service.py  lawd_service.py  s3_service.py  vector_service.py
batch/src/utils/: helpers.py  logger.py
frontend/: .env.example  .gitignore  Dockerfile  IMPLEMENTATION.md  README.md  api_client.py  app.py  config.py  docker-compose.yml  env_example.txt  pyproject.toml  requirements.txt  run.py  run.sh  test_api_client.py
frontend/.streamlit/: config.toml  secrets.toml.example
frontend/components/: __init__.py  chat_interface.py  policy_card.py  property_card.py
frontend/src/: __init__.py  main.py
frontend/src/charts/: __init__.py  visualization.py
frontend/src/config/: __init__.py  settings.py
frontend/src/models/: __init__.py  assistant.py
frontend/src/prompts/: real_estate_assistant.py
frontend/src/services/: opensearch_service.py
frontend/src/ui/: __init__.py  chat.py  data_analysis.py  data_search.py  sidebar.py
frontend/src/utils/: __init__.py  aws_knowledge_base.py  data_loader.py
frontend/utils/: aws_knowledge_base.py  data_loader.py
(+308 files in other folders)
